--- a/TheDebtBook/Views/MainWindow.xaml
+++ b/TheDebtBook/Views/MainWindow.xaml
@@ -27,14 +27,13 @@
                   IsSynchronizedWithCurrentItem="True"
                   ItemsSource="{Binding Path=Debtors}"
                   SelectedItem="{Binding Path=CurrentDebtor}"
-                  SelectedIndex="{Binding Path=CurrentIndex}">
+                  SelectedIndex="{Binding Path=CurrentIndex}" SelectionChanged="DataGrid_SelectionChanged">
         </DataGrid>
 
         <Button Grid.Row="1" Grid.Column="1" Content="Add" 
                 Margin="5,0"
                 Command="{Binding Path=AddNewCommand}">
         </Button>
-
 
     </Grid>
 </Window>
