--- a/TheDebtBook/Views/UpdateDebtOwed.xaml
+++ b/TheDebtBook/Views/UpdateDebtOwed.xaml
@@ -4,11 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TheDebtBook.Views"
+        xmlns:viewModels="clr-namespace:TheDebtBook.ViewModels"
         mc:Ignorable="d"
         Title="Update Debt Owed" Height="450" Width="800">
-    <Window.DataContext>
-        <local:UpdateDebtOwed></local:UpdateDebtOwed>
-    </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -24,7 +22,7 @@
 
         <DataGrid Grid.Row="1"
                   IsSynchronizedWithCurrentItem="True"
-                  ItemsSource="{Binding Path=DebtsList}">
+                  ItemsSource="{Binding Path=UpdateDebtList}">
         </DataGrid>
 
         <Button Grid.Row="2" Content="Close" Margin="5,5"
