--- a/TheDebtBook/Views/AddDebtor.xaml
+++ b/TheDebtBook/Views/AddDebtor.xaml
@@ -32,7 +32,7 @@
         <TextBox Grid.Row="2" Grid.Column="1" MinWidth="200" Text="{Binding Path=AddNewDebtor.MoneyOwed}"></TextBox>
 
 
-        <Button Grid.Row="3" Content="Ok" Width="35"></Button>
+        <Button Grid.Row="3" Content="Ok" Width="35" Command="{Binding Path=OkCommand}"></Button>
         <Button Grid.Row="3" Grid.Column="1" Content="Cancel" Width="45" Command="{Binding Path=CancelCommand}"></Button>
 
     </Grid>
