--- a/TheDebtBook/Views/UpdateDebtOwed.xaml
+++ b/TheDebtBook/Views/UpdateDebtOwed.xaml
@@ -5,10 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TheDebtBook.Views"
         xmlns:viewModels="clr-namespace:TheDebtBook.ViewModels"
+        xmlns:theDebtBook="clr-namespace:TheDebtBook"
         mc:Ignorable="d"
         Title="Update Debt Owed" Height="450" Width="800">
     <Window.DataContext>
-        <viewModels:UpdateDebtViewModel></viewModels:UpdateDebtViewModel>
+        <viewModels:UpdateDebtViewModel>
+        </viewModels:UpdateDebtViewModel>
     </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -25,7 +27,7 @@
 
         <DataGrid Grid.Row="1"
                   IsSynchronizedWithCurrentItem="True"
-                  ItemsSource="{Binding Path=UpdateDebtList}"
+                  ItemsSource="{Binding Path=CurrentDebtor.DebtsList}"
                   AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Date" Binding="{Binding Path=Date}"></DataGridTextColumn>
@@ -39,8 +41,8 @@
         </Button>
 
         <StackPanel Grid.Row="1" Grid.Column="1">
-            <TextBox  Margin="5,5"></TextBox>
-            <Button Margin="5,5 " Content="Add value"></Button>
+            <TextBox  Margin="5,5" Text="{Binding Path=Value}"></TextBox>
+            <Button Margin="5,5 " Content="Add value" Command="{Binding Path=AddValueCommand}"></Button>
         </StackPanel>
 
     </Grid>
